@@ -858,7 +858,9 @@ namespace MySql.Data.MySqlClient
 				if (ex.IsFatal)
 					connection.Abort();
                 nextResultDone = true;
-                hasRows = canRead = false; 
+                hasRows = canRead = false;
+                if (command.TimedOut)
+                    throw new MySqlException(Resources.Timeout);
                 throw;
 			}
 
@@ -896,6 +898,17 @@ namespace MySql.Data.MySqlClient
 			{
 				if (ex.IsFatal)
 					connection.Abort();
+
+                // if we get a query interrupted then our resultset is done
+                if (ex.Number == 1317)
+                {
+                    nextResultDone = true;
+                    canRead = false;
+                    if (command.TimedOut)
+                        throw new MySqlException(Resources.Timeout);
+                    return false;
+                }
+
 				throw;
 			}
 		}
